# DaVinci

./: .gitignore  CLAUDE.md  README.md
DarwinG/: run_crawler.sh
DarwinG-Crawl/: CLAUDE.md  pyproject.toml
DarwinG-Crawl/crawler/: crawl_fm_url.py
DarwinG-Crawl/crawler/legacy/: crawl.py  crawl_manual_pause.py
DarwinG-FM-Login/: .gitignore  FOREST_MARKET_API.md  FOREST_MARKET_API_DOCUMENTATION.md  README.md  real_metamask_login_data.json  session_token.txt  signer.html  test_full_login_flow.py
DarwinG-Langbot/: .dockerignore  CONTRIBUTING.md  README.md  README_EN.md  README_JP.md  docker-compose.yaml  fly.toml
DarwinG-Langbot/.github/: pull_request_template.md
DarwinG-Langbot/res/: instance_id.json
DarwinG-Langbot/templates/: config.yaml  default-pipeline-config.json
DarwinG-MCP/: .gitignore  CLAUDE.md  README.md  drafts.json  integrated_mcp_server_oauth.py  integrated_mcp_server_remote_oauth.py  integrated_mcp_server_stdio.py  integrated_mcp_server_structured.py  integrated_mcp_server_structured_auto.py  pyproject.toml  requirements.txt
DarwinG-MCP/utils/: custom_data_structure.py  internal_tools.py  models.py  server_draft.py  tools.py  tools_draft.py
DarwinG-Marketing/: README_MCP.md  SIMPLIFIED_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md  main.py  mcp_config.json  pyproject.toml  twitter_mcp_server.py
DarwinG-Marketing/examples/: authentication.py  create_tweet.py  expansions.py  get_liked_tweets.py  get_liking_users.py  get_recent_tweets_count.py  get_retweeters.py  get_tweets.py  get_users.py  get_users_followers.py  get_users_mentions.py  get_users_tweets.py  search_recent_tweets.py  tweet_fields.py
DarwinG-UI/: .eslintrc.json  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
DarwinG-UI/app/: layout.tsx  page.tsx
DarwinG-UI/components/: blockchain-sync-indicator.tsx  chat-bubbles.tsx  dynamic-wallet-connect.tsx  sidebar.tsx  theme-toggle.tsx  tool-execution.tsx
DarwinG-UI/hooks/: useBlockchainSync.ts
DarwinG-UI/lib/: blockchain.ts  conversation.ts  logger.ts
DarwinG-UI/src/: index.ts
DarwinG-UI/styles/: elegant-theme.css  globals.css  hacker-theme.css  light-theme.css
DarwinG-Upload/: mcp_product_listing.py  test_cookie.py  test_mcp_client.py  test_mcp_server.py  test_upload.py  upload_tools.py
DarwinG-cdp/: README.md  buyer_agent.py  check_balance.py  requirements.txt  run_x402.py  seller_service.py
DarwinG/helper/: json_to_markdown.py
DarwinGjzx-repo/: .gitignore  README.md  run_crawler.bat
DarwinGjzx-repo/crawler/: crawl_fm_detailed.py
DarwinGjzx-repo/helper/: check_urls.py
forest-market-draft-mcp/: .gitignore  OVERVIEW.md  README.md  __init__.py  models.py  pyproject.toml  server.py  storage.py  test_draft_mcp.py  tools.py
(+45 files in other folders)
