[project]
name = "darwing-crawl"
version = "0.1.0"
description = "Web scraping project for Forest Market product data extraction"
authors = [
    {name = "DarwinG", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "crawl4ai>=0.7.0",
    "openai>=1.97.1",
    "playwright>=1.40.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[project.scripts]
crawl-basic = "src.crawler.legacy.crawl:main"
crawl-fm = "src.crawler.legacy.crawl_fm:main"
crawl-detailed = "src.crawler.crawl_fm_detailed:main"
crawl-manual = "src.crawler.legacy.crawl_manual_pause:main"
crawl-url = "src.crawler.crawl_fm_url:main"
crawl-multi-url = "src.crawler.crawl_fm_url_enhanced:main"
